--- a/_posts/2014-12-18-skip-list.md
+++ b/_posts/2014-12-18-skip-list.md
@@ -74,7 +74,7 @@ tags:	[algorithm]
 5,每个节点包含key及其对应的value和一个指向同一层链表的下个节点的指针数组
 
 如图所示。
- ![](/images/images/githubpages/skiplist3.jpg)
+ ![]({{site.baseurl}}/images/images/githubpages/skiplist3.jpg)
                      
  
 
